Mise en place de la couche de persistance JPA sur les entités.

--- a/fr.pacman.core/resources/nommage.properties
+++ b/fr.pacman.core/resources/nommage.properties
@@ -92,7 +92,7 @@ packagePgeSwing = client.ui.swing.widgets
 packagePgeGwt = client.ui.gwt.widgets
 # Le prefixe des listes
 listPrefix = 
-# Le prefixe des map
+# Le prefixe des maps
 mapPrefix = 
 # Le suffixe pour les entites
 entitySuffix = entity
