Modification et ajouts sur les champs automatiques de la base de données.

--- a/fr.pacman.test/resources/test/model/pacman-properties/project.properties
+++ b/fr.pacman.test/resources/test/model/pacman-properties/project.properties
@@ -144,9 +144,9 @@ server.sql.table.additional_field.xtopsup.default = 0
 # Champ additionnel pour les tables SQL (specifique utilisateur).
 server.sql.table.additional_field.xtopsup.name = XTOPSUP
 # Champ additionnel pour les tables SQL (specifique utilisateur).
-server.sql.table.additional_field.xdmaj.comment = Date de mise a jour de la ligne.
+server.sql.table.additional_field.xdmaj.comment = Date de mise a jour de la ligne
 # Champ additionnel pour les tables SQL (specifique utilisateur).
-server.sql.table.additional_field.xtopsup.comment = Indicateur de suppression logique.
+server.sql.table.additional_field.xtopsup.comment = Indicateur de suppression logique
 # Mode de fonctionnement pour la pagination (auto, user, vide par defaut)
 paging.mode = auto
 # Propriete dans l'en-tête pour le stockage du nombre total d'occurences
