--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ target/
 # Fichiers de log
 # ***************
 *.log
+# ***********************
+# Fichiers de sauvegarde
+# ***********************
+*.bak
 # ******************************************************************
 # Sécurité supplémentaire si un fichier est compilé hors de sa zone.
 # ******************************************************************
