Ajout d'exigences de validation + complétion des méthodes rest dans le cas ou l'objet de retour n'est pas un dto.

--- a/fr.pacman.config.ui/plugin.xml
+++ b/fr.pacman.config.ui/plugin.xml
@@ -21,7 +21,7 @@
                   commandId="fr.pacman.config.ui.commands.ConfigGeneratorCommand"
                   id="fr.pacman.config.ui.commands.ConfigGeneratorCommand" 
                   icon="icons/cali.png" 
-                  label="Génération de la couche de service">
+                  label="Génération de la configuration du projet">
                <visibleWhen
                      checkEnabled="false">
                   <with
