--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,11 @@
 
 	<properties>
 		<java.version>17</java.version>
-		<tycho-version>4.0.8</tycho-version>
 		<acceleo-version>3.6.4</acceleo-version>
+		<tycho-version>4.0.8</tycho-version>
 		<properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
 		<central-repository-url>https://repo.maven.apache.org/maven2</central-repository-url>
-		<acceleo-releases_url>https://repo.eclipse.org/content/repositories/acceleo-releases</acceleo-releases_url>
+		<acceleo-releases_url>https://download.eclipse.org/acceleo/updates/releases/4.1/R202502130921/</acceleo-releases_url>
 		<odc-updatesite-url>http://www.obeo.fr/download/release/designer/11.9/community/11.9.0/repository/</odc-updatesite-url>
 		<is-updatesite-url>https://www.obeosoft.com/download/release/informationsystem/5.1.0/design/repository/</is-updatesite-url>
 		<eclipse-updatesite-url>http://download.eclipse.org/releases/2023-03/</eclipse-updatesite-url> 
@@ -39,6 +39,11 @@
 			<layout>p2</layout>
 			<url>${eclipse-updatesite-url}</url>
 		</repository>
+		<repository>
+            <id>acceleo-releases</id>
+            <layout>p2</layout>
+            <url>${acceleo-releases_url}</url>
+        </repository>
 	</repositories>
 	
 	<pluginRepositories>
@@ -53,10 +58,6 @@
 			<releases>
 				<updatePolicy>never</updatePolicy>
 			</releases>
-		</pluginRepository>
-		<pluginRepository>
-			<id>Eclipse - Acceleo Releases</id>
-			<url>${acceleo-releases_url}</url>
 		</pluginRepository>
 	</pluginRepositories>
 
@@ -102,7 +103,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<release>${java.version}</release>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 					<encoding>UTF-8</encoding>
 					<compilerArgument>-Xlint</compilerArgument>
 				</configuration>
@@ -138,20 +140,6 @@
 
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>org.eclipse.acceleo</groupId>
-					<artifactId>org.eclipse.acceleo.maven</artifactId>
-					<version>${acceleo-version}</version>
-					<executions>
-						<execution>
-							<id>acceleo-compile</id>
-							<phase>compile</phase>
-							<goals>
-								<goal>acceleo-compile</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
 				<plugin>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.7</version>
