Harmonisation pour passer sur la 5.1.1 release, à ce stade création d'un nouveau projet sans aucun warning.

--- a/fr.pacman.start/build.properties
+++ b/fr.pacman.start/build.properties
@@ -1,7 +1,4 @@
 source.. = src/
 output.. = bin/
-bin.includes = META-INF/,\
-               .,\
-               resources/
-src.includes = resources/
-jre.compilation.profile = JavaSE-17
+bin.includes = .,\
+               META-INF/
