--- a/fr.pacman.start.ui/plugin.xml
+++ b/fr.pacman.start.ui/plugin.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin> 
+<extension point="org.eclipse.ui.views">
+      <view
+         id="fr.pacman.start.ui.views.HtmlViewerView"
+         name="Récapitulatif pour le projet"
+         class="fr.pacman.start.ui.views.HtmlViewerView"
+         restorable="true">
+      </view>
+   </extension>
     <extension
          point="org.eclipse.ui.newWizards">
       <wizard
