Mise en place des nouvelles icones + ajout du squelette pour les projets soaclient.

--- a/fr.pacman.branding/build.properties
+++ b/fr.pacman.branding/build.properties
@@ -3,5 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               cali.png,\
+               pacmug.png,\
                about.ini
