--- a/fr.pacman.entity.ui/plugin.xml
+++ b/fr.pacman.entity.ui/plugin.xml
@@ -14,7 +14,7 @@
             locationURI="popup:org.eclipse.ui.popup.any?after=additions">
          <menu
                id="fr.pacman.ui.menus.generators"
-               icon="icons/cali.png"
+               icon="icons/pacmug.png"
                tooltip="Liste des générateurs Cali"
                label="Générateurs Cali">
             <command
