--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<odc-updatesite-url>http://www.obeo.fr/download/release/designer/11.9/community/11.9.0/repository/</odc-updatesite-url>
 		<is-updatesite-url>https://www.obeosoft.com/download/release/informationsystem/5.1.0/design/repository/</is-updatesite-url>
 		<eclipse-updatesite-url>http://download.eclipse.org/releases/2023-03/</eclipse-updatesite-url> 
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	
 	<repositories>
