--- a/fr.pacman.start.ui/build.properties
+++ b/fr.pacman.start.ui/build.properties
@@ -4,5 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-
+               resources/lib/commonmark-0.24.0.jar
 
