Mise en place de l'héritage au niveau de la couche soa.

--- a/fr.pacman.soaclient.ui/plugin.xml
+++ b/fr.pacman.soaclient.ui/plugin.xml
@@ -34,7 +34,7 @@
                            </instanceof>
                            <test
                                  property="org.eclipse.core.resources.extension"
-                                 value="soa">
+                                 value="soa2">
                            </test>
                         </and>
                      </iterate>
