Refonte du système de validation des modèles, mise en place de la vue de validation avec synchro des diagrammes.

--- a/fr.pacman.core.ui/plugin.xml
+++ b/fr.pacman.core.ui/plugin.xml
@@ -8,4 +8,14 @@
   			uri="platform:/plugin/fr.pacman.core.ui/resources/pacman.metadatadef">
  		</model>
 	</extension>
+	<extension
+     point="org.eclipse.ui.views">
+      <view
+         name="Rapport de validation"
+         icon="icons/pacmug.png"          
+         class="fr.pacman.core.ui.validation.PacmanUIValidationView"
+         id="fr.pacman.validation.ui.core.ValidationView"
+         category="org.obeonetwork.od4is">
+      </view>
+   </extension>
 </plugin>
