Ajout validation client + icones de validation et génération + propertyTesters.

--- a/fr.pacman.config.ui/plugin.xml
+++ b/fr.pacman.config.ui/plugin.xml
@@ -18,6 +18,7 @@
                tooltip="Liste des générateurs Cali"
                label="Générateurs Cali">
             <command
+                  icon="icons/generate.png"
                   commandId="fr.pacman.config.ui.commands.ConfigGeneratorCommand"
                   id="fr.pacman.config.ui.commands.ConfigGeneratorCommand" 
                   label="Génération de la configuration du projet">
