--- a/fr.pacman.soa.ui/plugin.xml
+++ b/fr.pacman.soa.ui/plugin.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+    <extension 
+          point="org.eclipse.core.expressions.propertyTesters">
+        <propertyTester
+            id = "fr.pacman.tester.server"
+            namespace="fr.pacman.soa"
+            properties="canShowMenu"
+            type="org.eclipse.core.resources.IResource"
+            class="fr.pacman.soa.ui.testers.PacmanUIServerPropertyTester"/>
+   </extension>
    <extension
          point="org.eclipse.ui.handlers">
       <handler
@@ -22,6 +31,7 @@
                tooltip="Liste des générateurs Cali"
                label="Générateurs Cali">
             <command
+                  icon="icons/generate.png"
                   commandId="fr.pacman.soa.ui.commands.SoaGeneratorCommand"
                   id="fr.pacman.soa.ui.commands.SoaGeneratorCommand" 
                   label="Génération du fournisseur pour les services">
@@ -40,12 +50,16 @@
                                  property="org.eclipse.core.resources.extension"
                                  value="soa">
                            </test>
+                           <test 
+                                 forcePluginActivation="true"
+                                 property="fr.pacman.soa.canShowMenu"/>
                         </and>
                      </iterate>
                   </with>
                </visibleWhen>
             </command>
             <command
+                  icon="icons/validate.png"
                   commandId="fr.pacman.soa.validation.ui.commands.ValidationGeneratorCommand"
                   id="fr.pacman.soa.validation.ui.commands.ValidationGeneratorCommand" 
                   label="Validation du fournisseur pour les services">
@@ -64,6 +78,9 @@
                                  property="org.eclipse.core.resources.extension"
                                  value="soa">
                            </test>
+                           <test 
+                                 forcePluginActivation="true"
+                                 property="fr.pacman.soa.canShowMenu"/>
                         </and>
                      </iterate>
                   </with>
@@ -81,12 +98,12 @@
       <command
             categoryId="fr.pacman.soa.ui.commands.generatorsCategory"
             id="fr.pacman.soa.ui.commands.SoaGeneratorCommand"
-            name="fr::pacman::soa::service::generateServerSoa">
+            name="Génération du fichier de service">
       </command>
       <command
             categoryId="fr.pacman.soa.ui.commands.generatorsCategory"
             id="fr.pacman.soa.validation.ui.commands.ValidationGeneratorCommand"
-            name="Générer la validation du fichier de service">
+            name="Validation du fichier de service">
       </command>
    </extension>
 </plugin>
