--- a/fr.pacman.back.soaclient.react/pom.xml
+++ b/fr.pacman.back.soaclient.react/pom.xml
@@ -10,7 +10,7 @@
 		<version>5.0.0</version>
 	</parent>
 	
-	<artifactId>fr.pacman.back.soaclient.spi4j</artifactId>
+	<artifactId>fr.pacman.back.soaclient.react</artifactId>
 	<packaging>eclipse-plugin</packaging>
 	<name>fr.pacman.back.soaclient.react</name>
 	<description>Projet Pacman back pour les generateurs Soa client React.</description>
